--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,7 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>HTML Academy: Седона - Фото и видео</title>
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -30,80 +30,88 @@
       </nav>
     </header>
     <main class="main-container">
-      <h1 class="visually-hidden">Добро пожаловать в Седону - небольшой городок в Аризоне</h1>
-      <section class="intro">  <!-- У секции обязательно должен быть h2? В валидаторе warning-->
-        <div class="intro__wrapper">
-          <div class="intro__image">
-            <img class="intro__slogan" src="img/intro-slogan.svg" width="282" height="214" alt="Добро пожаловать в Седону">
-          </div>
-          <div class="intro__text-block text-block">
-            <p class="text-block__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
-            <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <h1 class="visually-hidden">Фото и видео Седоны - небольшого городка в Аризоне</h1>
+      <section class="intro  intro--other-page">
+        <div class="intro__wrapper  intro__wrapper--other-page">
+          <div class="intro__image  intro__image--other-page">
+            <img class="intro__slogan intro__slogan--other-page" src="img/intro-slogan-small.svg" width="229" height="39" alt="Логотип Седоны">
           </div>
         </div>
       </section>
-      <section class="advantages">
-        <div class="advantages__wrapper">
-          <h2 class="visually-hidden">Преимущества Седоны</h2>
-          <div class="advantages__item  advantages__item--city  advantage advantage--primary">  <!-- Можно ли сделать так, чтобы в advantages__item--city была картинка -->
-            <h3 class="advantage__title advantage__title--primary">Настоящий городок</h3>
-            <span class="advantage__number advantage__number--primary">— №1 —</span>
-            <p class="advantage__description advantage__description--primary">Седона не аттракцион для туристов, там течет своя жизнь</p>
+      <section class="gallery">
+        <h2 class="visually-hidden">Фотографии Седоны</h2>
+        <div class="gallery__wrapper">
+          <div class="gallery__text-block text-block">
+            <p class="text-block__title">Фото и видео</p>
+            <p class="text-block__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
           </div>
-          <ul class="advantages__item advantages-list">
-            <li class="advantage  advantage--has-icon">
-              <img class="advantage__icon" src="img/icon-house.svg" width="40" height="40" alt="Жилье в Седоне">
-              <h3 class="advantage__title">Жилье</h3>
-              <div class="advantage__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
+          <ul class="gallery__list">
+            <li class="gallery__item photo-card">
+              <img class="photo-card__image  photo-card__image--first"   src="img/gallery/photo-non-native-spaces.jpg" alt="Красочная дорога в город на фоне заката" width="280" height="280">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title">Неродные просторы</h3>
+                <p class="photo-card__author">Автор фото: Борис</p>
+                <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
+                  <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">  <!-- Здесь же можно данную svg перенсти в css для чистоты кода, ее же не нужно будет стилизовать при наведении? -->
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                  <span class="like__number">1350</span>
+                </button>
+              </div>
             </li>
-            <li class="advantage  advantage--has-icon">
-              <img class="advantage__icon" src="img/icon-burger.svg" width="40" height="40" alt="Еда в Седоне">
-              <h3 class="advantage__title">Еда</h3>
-              <div class="advantage__description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</div>
+            <li class="gallery__item photo-card">
+              <img class="photo-card__image"   src="img/gallery/photo-local-vegetation.jpg" alt="Кактус с желтыми соцветиями" width="280" height="280">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title">Местная растительность</h3>
+                <p class="photo-card__author">Автор фото: Сергей</p>
+                <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
+                  <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                  <span class="like__number">143</span>
+                </button>
+              </div>
             </li>
-            <li class="advantage  advantage--has-icon  icon-gift"> <!-- Мне кажется, что иконку конечно лучше добавлять через классы, но можно ли так оформить? Если да, остальные две сделаю также.-->
-              <h3 class="advantage__title">Сувениры</h3>
-              <div class="advantage__description">Не только китайского, но и местного производства!</div>
+            <li class="gallery__item photo-card">
+              <img class="photo-card__image"   src="img/gallery/photo-road-north.jpg" alt="Извилистая дорога по горе на Север" width="280" height="280">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title">Дорога на север</h3>
+                <p class="photo-card__author">Автор фото: Петр</p>
+                <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
+                  <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                  <span class="like__number">96</span>
+                </button>
+              </div>
+            </li>
+            <li class="gallery__item photo-card">
+              <img class="photo-card__image"   src="img/gallery/photo-devils-bridge.jpg" alt="Вид на мост дьявола" width="280" height="280">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title">Мост дьявола</h3>
+                <p class="photo-card__author">Автор фото: Антон</p>
+                <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
+                  <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                  <span class="like__number">254</span>
+                </button>
+              </div>
             </li>
           </ul>
-          <div class="advantages__item advantages__item--bridge advantage advantage--primary">
-            <h3 class="advantage__title advantage__title--primary">Там есть мост дьявола</h3>
-            <span class="advantage__number advantage__number--primary">— №2 —</span>
-            <p class="advantage__description advantage__description--primary">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </div>
-          <ul class="advantages__item advantages__item--other advantages-list">
-            <li class="advantage advantage--has-border">
-              <h3 class="advantage__title">Небольшая площадь</h3>
-              <span class="advantage__number">— №3 —</span>
-              <p class="advantage__description">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="advantage advantage--has-border">
-              <h3 class="advantage__title">Красивая дорога</h3>
-              <span class="advantage__number">— №4 —</span>
-              <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantage">
-              <h3 class="advantage__title">Мало туристов</h3>
-              <span class="advantage__number">— №5 —</span>
-              <p class="advantage__description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ul>
         </div>
       </section>
-      <section class="search-housing">
-        <div class="search-housing__wrapper">
-          <h2 class="visually-hidden">Найти жилье в Седоне</h2>
-          <div class="search-housing__text-block text-block">
-            <p class="text-block__title">Заинтересовались?</p>
-            <p class="text-block__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <button class="text-block__button button"  type="button">Найти гостиницу</button>
+      <section class="video">
+        <h2 class="visually-hidden">Видео Седоны</h2>
+        <div class="video__wrapper">
+          <div class="video__text-block text-block">
+            <p class="text-block__title">Все еще сомневаетесь?</p>
+            <p class="text-block__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
           </div>
-        </div>
-      </section>
-      <section class="map">
-        <div class="map__wrapper">
-          <h2 class="visually-hidden">Седона на карте</h2>
-          <img class="map__photo" src="img/map-mobile.jpg" width="320" height="350" alt="Седона на карте">
+          <div class="video__item">
+            <img class="video__img" src="img/video-mobile.jpg" alt="Видео путешествие по городку Седоны" width="280" height="177">
+            <button class="video__icon-play" type="button"><span class="visually-hidden">Посмотреть видео</span></button>
+          </div>
         </div>
       </section>
     </main>
