--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,17 +13,17 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item  main-nav__item--current">
-              <a>Главная</a>
-            </li>
             <li class="main-nav__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item main-nav__item--current">
               <a>Фото и видео</a>
             </li>
             <li class="main-nav__item">
-              <a>Форма отзыва</a>
+              <a href="form.html">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a>HTML Academy</a>
+              <a href="https://htmlacademy.ru/study" target="_blank">HTML Academy</a>
             </li>
           </ul>
         </div>
