--- a/source/index.html
+++ b/source/index.html
@@ -17,13 +17,13 @@
               <a>Главная</a>
             </li>
             <li class="main-nav__item">
-              <a>Фото и видео</a>
+              <a href="catalog.html">Фото и видео</a>
             </li>
             <li class="main-nav__item">
-              <a>Форма отзыва</a>
+              <a href="form.html">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a>HTML Academy</a>
+              <a href="https://htmlacademy.ru/study" target="_blank">HTML Academy</a>
             </li>
           </ul>
         </div>
