--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,14 +2,16 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона - Фото и видео</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="main-header">
       <a class="main-header__logo">
         <img src="img/main-logo.svg" alt="Логотип городка Sedona">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
@@ -147,5 +149,6 @@
           </a>
       </div>
     </footer>
+    <script src="js/mobile-menu.js"></script>
   </body>
 </html>
