Исправление недочетов задания

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
         <h2 class="visually-hidden">Фотографии Седоны</h2>
         <div class="gallery__wrapper">
           <div class="gallery__text-block text-block">
-            <p class="text-block__title">Фото и видео</p>
+            <p class="gallery__title text-block__title">Фото и видео</p>
             <p class="text-block__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
           </div>
           <ul class="gallery__list">
@@ -115,7 +115,7 @@
         <h2 class="visually-hidden">Видео Седоны</h2>
         <div class="video__wrapper">
           <div class="video__text-block text-block">
-            <p class="text-block__title">Все еще сомневаетесь?</p>
+            <p class="video__title text-block__title">Все еще сомневаетесь?</p>
             <p class="text-block__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__item">
