Правка по лишнему классу

--- a/source/form.html
+++ b/source/form.html
@@ -169,7 +169,7 @@
       <h2 class="visually-hidden">Ваша форма не отправлена</h2>
       <div class="notification__wrapper">
           <div class="notification__text-block text-block">
-            <p class="notification text-block__title">Что-то пошло не так</p>
+            <p class="text-block__title">Что-то пошло не так</p>
             <p class="notification__description text-block__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
             <button class="notification__button button" type="button">Ок</button>
           </div>
