--- a/3/form.html
+++ b/3/form.html
@@ -45,7 +45,7 @@
         <h2 class="visually-hidden">Оставить отзыв о путешествии в городок Седоны</h2>
         <div class="review__wrapper">
           <div class="review__text-block text-block">
-            <p class="text-block__title">Оставьте свой отзыв</p>
+            <p class="review__title text-block__title">Оставьте свой отзыв</p>
             <p class="text-block__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           </div>
           <form class="review__form  form" method="post" action="https://echo.htmlacademy.ru/">
@@ -64,7 +64,7 @@
                 <input class="form__input" type="text" id="person_patronymic" name="person_patronymic"  value="Викторович" placeholder="Введите отчество">
               </p>
             </fieldset>
-            <fieldset class="form__field-group">
+            <fieldset class="form__field-group form__field-group--contacts">
               <legend class="form__legend">Контактная информация:</legend>
               <p class="form__label-group">
                 <label class="form__label" for="person_phone">Контактный телефон*:</label>
@@ -171,7 +171,7 @@
       <div class="notification__wrapper">
           <div class="notification__text-block text-block">
             <p class="text-block__title">Что-то пошло не так</p>
-            <p class="text-block__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+            <p class="notification__description text-block__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
             <button class="notification__button button" type="button">Ок</button>
           </div>
         </div>
@@ -181,7 +181,7 @@
       <div class="notification__wrapper">
           <div class="notification__text-block text-block">
             <p class="text-block__title">Ваш отзыв отправлен</p>
-            <p class="text-block__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+            <p class="notification__description text-block__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
             <button class="notification__button button" type="button">Закрыть окно</button>
           </div>
         </div>
