Сетка крупных блоков главной и каталога

--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
             alt="Добро пожаловать в Седону">
         </div>
         <div class="intro__text-block text-block">
-          <p class="text-block__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
+          <p class="intro__title text-block__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
           <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
       </div>
@@ -52,12 +52,14 @@
       <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
         <div class="advantages__item    advantage advantage--with-img">
-          <div class="advantage__section">
-            <h3 class="advantage__title">Настоящий городок</h3>
-            <span class="advantage__number">— №1 —</span>
-            <p class="advantage__description ">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <div class="advantage__wrapper">
+            <div class="advantage__section">
+              <h3 class="advantage__title">Настоящий городок</h3>
+              <span class="advantage__number">— №1 —</span>
+              <p class="advantage__description ">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <img class="advantage__image" src="img/photo-city.jpg" alt="Вид на город Седона." width="320" height="260">
           </div>
-          <img class="advantage__image" src="img/photo-city.jpg" alt="Вид на город Седона." width="320" height="260">
           <ul class="advantages__list services">
             <li class="services__item  services__item--house">
               <h3 class="services__title">Жилье</h3>
@@ -74,12 +76,14 @@
           </ul>
         </div>
         <div class="advantages__item  advantage advantage--with-img  advantage--bridge">
-          <div class="advantage__section">
-            <h3 class="advantage__title">Там есть мост дьявола</h3>
-            <span class="advantage__number">— №2 —</span>
-            <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <div class="advantage__wrapper">
+            <div class="advantage__section">
+              <h3 class="advantage__title">Там есть мост&nbsp;дьявола</h3>
+              <span class="advantage__number">— №2 —</span>
+              <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="advantage__image" src="img/photo-bridge.jpg" alt="Вид на мост Дьявол." width="320" height="260">
           </div>
-          <img class="advantage__image" src="img/photo-bridge.jpg" alt="Вид на мост Дьявол." width="320" height="260">
         </div>
         <div class="advantages__item advantages__item--other advantage advantage--has-border">
           <h3 class="advantage__title">Небольшая площадь</h3>
