--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,13 +48,15 @@
             <p class="text-block__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
           </div>
           <ul class="gallery__list">
-            <li class="gallery__item photo-card">
+            <li class="gallery__item photo-card photo-card--first">
               <a class="photo-card__link" href="#">
-                <img class="photo-card__image  photo-card__image--first"   src="img/gallery/photo-non-native-spaces.jpg" alt="Красочная дорога в город на фоне заката" width="280" height="280">
+                <img class="photo-card__image"   src="img/gallery/photo-non-native-spaces.jpg" alt="Красочная дорога в город на фоне заката" width="280" height="280">
               </a>
               <div class="photo-card__description">
-                <h3 class="photo-card__title">Неродные просторы</h3>
-                <p class="photo-card__author">Автор фото: Борис</p>
+                <div class="photo-card__description-wrapper">
+                  <h3 class="photo-card__title">Неродные просторы</h3>
+                  <p class="photo-card__author">Автор фото: Борис</p>
+                </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">  <!-- Здесь же можно данную svg перенсти в css для чистоты кода, ее же не нужно будет стилизовать при наведении? -->
                     <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -68,8 +70,10 @@
                 <img class="photo-card__image"   src="img/gallery/photo-local-vegetation.jpg" alt="Кактус с желтыми соцветиями" width="280" height="280">
               </a>
               <div class="photo-card__description">
-                <h3 class="photo-card__title">Местная растительность</h3>
-                <p class="photo-card__author">Автор фото: Сергей</p>
+                <div class="photo-card__description-wrapper">
+                  <h3 class="photo-card__title">Местная растительность</h3>
+                  <p class="photo-card__author">Автор фото: Сергей</p>
+                </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
                     <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -78,13 +82,15 @@
                 </button>
               </div>
             </li>
-            <li class="gallery__item photo-card">
+            <li class="gallery__item photo-card gallery__item--dark">
               <a class="photo-card__link" href="#">
                 <img class="photo-card__image"   src="img/gallery/photo-road-north.jpg" alt="Извилистая дорога по горе на Север" width="280" height="280">
               </a>
               <div class="photo-card__description">
-                <h3 class="photo-card__title">Дорога на север</h3>
-                <p class="photo-card__author">Автор фото: Петр</p>
+                <div class="photo-card__description-wrapper">
+                  <h3 class="photo-card__title">Дорога на север</h3>
+                  <p class="photo-card__author">Автор фото: Петр</p>
+                </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
                     <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -98,8 +104,10 @@
                 <img class="photo-card__image"   src="img/gallery/photo-devils-bridge.jpg" alt="Вид на мост дьявола" width="280" height="280">
               </a>
               <div class="photo-card__description">
-                <h3 class="photo-card__title">Мост дьявола</h3>
-                <p class="photo-card__author">Автор фото: Антон</p>
+                <div class="photo-card__description-wrapper">
+                  <h3 class="photo-card__title">Мост дьявола</h3>
+                  <p class="photo-card__author">Автор фото: Антон</p>
+                </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon" width="23" height="21" aria-hidden="true" focusable="false">
                     <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
