--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
         <div class="advantages__item advantages__item--other advantage advantage--has-border">
           <h3 class="advantage__title">Красивая дорога</h3>
           <span class="advantage__number">— №4 —</span>
-          <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем <br class="only-tablet"> не скучно!</p>
         </div>
         <div class="advantages__item advantages__item--other advantage advantage--has-border advantage--last">
           <h3 class="advantage__title">Мало туристов</h3>
@@ -106,8 +106,8 @@
       <div class="search-housing__wrapper">
         <h2 class="visually-hidden">Найти жилье в Седоне</h2>
         <div class="search-housing__text-block text-block">
-          <p class="text-block__title">Заинтересовались?</p>
-          <p class="text-block__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          <p class="search-housing__title text-block__title">Заинтересовались?</p>
+          <p class="search-housing__description text-block__description">Укажите предполагаемые даты поездки,<br class="only-tablet"> и мы покажем вам лучшие предложения
             гостиниц в седоне</p>
           <a class="text-block__button button" href="">Найти гостиницу</a>
         </div>
