--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -58,7 +62,12 @@
               <span class="advantage__number">— №1 —</span>
               <p class="advantage__description ">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <img class="advantage__image" src="img/photo-city.jpg" alt="Вид на город Седона." width="320" height="260">
+            <div class="advantage__image-wrapper">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/advanteges/photo-city-desktop.jpg 1x, img/advantages/photo-city-desktop@2x.jpg 2x">
+                <img class="advantage__image" src="img/advanteges/photo-city.jpg" srcset="img/advanteges/photo-city@2x.jpg 2x" alt="Вид на город Седона." width="320" height="260">
+              </picture>
+            </div>
           </div>
           <ul class="advantages__list services">
             <li class="services__item  services__item--house">
@@ -71,7 +80,8 @@
             </li>
             <li class="services__item  services__item--gift">
               <h3 class="services__title">Сувениры</h3>
-              <p class="services__description">Не только китайского,<br class="br-visible br-visible--desktop"> но и местного производства!</p>
+              <p class="services__description">Не только китайского,<br class="br-visible br-visible--desktop"> но и
+                местного производства!</p>
             </li>
           </ul>
         </div>
@@ -80,9 +90,15 @@
             <div class="advantage__section">
               <h3 class="advantage__title">Там есть мост&nbsp;дьявола</h3>
               <span class="advantage__number">— №2 —</span>
-              <p class="advantage__description">Да, по нему можно пройти! <br class="br-visible br-visible--desktop">Если вы осмелитесь, конечно</p>
+              <p class="advantage__description">Да, по нему можно пройти! <br class="br-visible br-visible--desktop">Если вы
+                осмелитесь, конечно</p>
             </div>
-            <img class="advantage__image" src="img/photo-bridge.jpg" alt="Вид на мост Дьявол." width="320" height="260">
+            <div class="advantage__image-wrapper">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/advanteges/photo-bridge-desktop.jpg 1x, img/advantages/photo-bridge-desktop@2x.jpg 2x">
+                <img class="advantage__image" src="img/advanteges/photo-bridge.jpg" srcset="img/advanteges/photo-bridge@2x.jpg 2x" alt="Вид на мост Дьявол." width="320" height="260">
+              </picture>
+            </div>
           </div>
         </div>
         <div class="advantages__item advantages__item--other advantage advantage--has-border">
@@ -93,7 +109,8 @@
         <div class="advantages__item advantages__item--other advantage advantage--has-border">
           <h3 class="advantage__title">Красивая дорога</h3>
           <span class="advantage__number">— №4 —</span>
-          <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем <br class="br-visible br-visible--tablet br-visible--desktop"> не скучно!</p>
+          <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем <br
+              class="br-visible br-visible--tablet br-visible--desktop"> не скучно!</p>
         </div>
         <div class="advantages__item advantages__item--other advantage advantage--has-border advantage--last">
           <h3 class="advantage__title">Мало туристов</h3>
@@ -116,7 +133,10 @@
     <section class="map">
       <div class="map__wrapper">
         <h2 class="visually-hidden">Седона на карте</h2>
-        <img class="map__photo" src="img/map-mobile.jpg" width="320" height="350" alt="Седона на карте">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/map/map-desktop.jpg 1x, img/map/map-desktop@2x.jpg 2x">
+          <img class="map__photo" src="img/map/map-tablet.jpg" srcset="img/map/map-tablet@2x.jpg 2x" width="320" height="350" alt="Седона на карте">
+        </picture>
       </div>
     </section>
   </main>
