--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона - Фото и видео</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -50,7 +54,11 @@
           <ul class="gallery__list">
             <li class="gallery__item photo-card photo-card--first">
               <a class="photo-card__link" href="#">
-                <img class="photo-card__image"   src="img/gallery/photo-non-native-spaces.jpg" alt="Красочная дорога в город на фоне заката" width="280" height="280">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/gallery/photo-non-native-spaces-desktop.jpg 1x, img/gallery/photo-non-native-spaces-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/gallery/photo-non-native-spaces-tablet.jpg 1x, img/gallery/photo-non-native-spaces-tablet@2x.jpg 2x">
+                  <img class="photo-card__image"   src="img/gallery/photo-non-native-spaces.jpg" srcset="img/gallery/photo-non-native-spaces@2x.jpg 2x" alt="Красочная дорога в город на фоне заката" width="280" height="280">
+                </picture>
               </a>
               <div class="photo-card__description">
                 <div class="photo-card__description-wrapper">
@@ -67,7 +75,11 @@
             </li>
             <li class="gallery__item photo-card">
               <a class="photo-card__link" href="#">
-                <img class="photo-card__image"   src="img/gallery/photo-local-vegetation.jpg" alt="Кактус с желтыми соцветиями" width="280" height="280">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/gallery/photo-local-vegetation-desktop.jpg 1x, img/gallery/photo-local-vegetation-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/gallery/photo-local-vegetation-tablet.jpg 1x, img/gallery/photo-local-vegetation-tablet@2x.jpg 2x">
+                  <img class="photo-card__image"   src="img/gallery/photo-local-vegetation.jpg" srcset="img/gallery/photo-local-vegetation@2x.jpg 2x" alt="Кактус с желтыми соцветиями" width="280" height="280">
+                </picture>
               </a>
               <div class="photo-card__description">
                 <div class="photo-card__description-wrapper">
@@ -84,7 +96,11 @@
             </li>
             <li class="gallery__item photo-card gallery__item--dark">
               <a class="photo-card__link" href="#">
-                <img class="photo-card__image"   src="img/gallery/photo-road-north.jpg" alt="Извилистая дорога по горе на Север" width="280" height="280">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/gallery/photo-road-north-desktop.jpg 1x, img/gallery/photo-road-north-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/gallery/photo-road-north-tablet.jpg 1x, img/gallery/photo-road-north-tablet@2x.jpg 2x">
+                  <img class="photo-card__image"   src="img/gallery/photo-road-north.jpg" srcset="img/gallery/photo-road-north@2x.jpg 2x"  alt="Извилистая дорога по горе на Север" width="280" height="280">
+                </picture>
               </a>
               <div class="photo-card__description">
                 <div class="photo-card__description-wrapper">
@@ -101,7 +117,11 @@
             </li>
             <li class="gallery__item photo-card">
               <a class="photo-card__link" href="#">
-                <img class="photo-card__image"   src="img/gallery/photo-devils-bridge.jpg" alt="Вид на мост дьявола" width="280" height="280">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/gallery/photo-devils-bridge-desktop.jpg 1x, img/gallery/photo-devils-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/gallery/photo-devils-bridge-tablet.jpg 1x, img/gallery/photo-devils-bridge-tablet@2x.jpg 2x">
+                  <img class="photo-card__image"   src="img/gallery/photo-devils-bridge.jpg" srcset="img/gallery/photo-devils-bridge@2x.jpg 2x" alt="Вид на мост дьявола" width="280" height="280">
+                </picture>
               </a>
               <div class="photo-card__description">
                 <div class="photo-card__description-wrapper">
@@ -127,7 +147,11 @@
             <p class="text-block__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__item">
-            <img class="video__img" src="img/video-mobile.jpg" alt="Видео путешествие по городку Седоны" width="280" height="177">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/video/video-desktop.jpg 1x, img/video/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video/video-tablet.jpg 1x, img/video/video-tablet@2x.jpg 2x">
+              <img class="video__img"   src="img/video/video.jpg" srcset="img/video/video@2x.jpg 2x" alt="Видео путешествие по городку Седоны" width="280" height="177">
+            </picture>
             <button class="video__icon-play" type="button"><span class="visually-hidden">Посмотреть видео</span></button>
           </div>
         </div>
