Решение вопроса по svg-sprite

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page__body">
@@ -83,7 +83,7 @@
             </li>
             <li class="services__item  services__item--gift">
               <h3 class="services__title">Сувениры</h3>
-              <p class="services__description">Не только китайского,<br class="br-visible br-visible--desktop"> но и
+              <p class="services__description">Не только китайского, <br class="br-visible br-visible--desktop"> но и
                 местного производства!</p>
             </li>
           </ul>
@@ -93,7 +93,7 @@
             <div class="advantage__section">
               <h3 class="advantage__title">Там есть мост&nbsp;дьявола</h3>
               <span class="advantage__number">— №2 —</span>
-              <p class="advantage__description">Да, по нему можно пройти! <br class="br-visible br-visible--desktop">Если вы
+              <p class="advantage__description">Да, по нему можно пройти! <br class="br-visible br-visible--desktop"> Если вы
                 осмелитесь, конечно</p>
             </div>
             <div class="advantage__image-wrapper">
