--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -67,7 +67,7 @@
                 </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon"  aria-hidden="true"  width="23" height="21">
-                    <use xlink:href="img/sprite.svg#like__icon"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="like__number">1350</span>
                 </button>
@@ -88,7 +88,7 @@
                 </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon"  aria-hidden="true"  width="23" height="21">
-                    <use xlink:href="img/sprite.svg#like__icon"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="like__number">143</span>
                 </button>
@@ -109,7 +109,7 @@
                 </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon"  aria-hidden="true"  width="23" height="21">
-                    <use xlink:href="img/sprite.svg#like__icon"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="like__number">96</span>
                 </button>
@@ -130,7 +130,7 @@
                 </div>
                 <button class="photo-card__likes like" type="button" aria-label="Поставить лайк фотографии">
                   <svg class="like__icon" aria-hidden="true" width="23" height="21">
-                    <use xlink:href="img/sprite.svg#like__icon"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="like__number">254</span>
                 </button>
